Fix HTML encoding issues in fos-platters-description

--- a/Portfolio/fos-platters-description.html
+++ b/Portfolio/fos-platters-description.html
@@ -121,13 +121,13 @@
       <nav>
         <a href="https://github.com/Le-Jireh" style="border-radius: 0 1rem 1rem 0;">
           Le-Jireh
-          <img src="github-mark.svg" style="height:1rem; width:1rem;"></img>
+          <img src="Portfolio/github-mark.svg" style="height:1rem; width:1rem;"></img>
         </a>
         <a href="https://fo-platters.onrender.com/" style="border-radius: 1rem 0 0 1rem;"><b>Live Site</b></a>
       </nav>
       <p style="position:absolute; left:2.5%; bottom:2.5%;"><b style="font-family:'Bungee'">Technologies:</b> Python, Flask, Stripe, Front-End, APIs</p>
       <video autoplay muted loop playsinline>
-        <source src="food-bg.mp4" type="video/mp4">
+        <source src="Portfolio/food-bg.mp4" type="video/mp4">
       </video>
       <div class="Content">
         <h1 style="font-family:'Bungee';">FO'S PLATTERS</h1>
@@ -154,4 +154,5 @@
     </main>
   </body>
 </html>
+
 
