Fix HTML encoding and update video source paths

--- a/Portfolio/waves-description.html
+++ b/Portfolio/waves-description.html
@@ -214,12 +214,12 @@
   <body>
     <section id="top">
       <video autoplay muted loop playsinline>
-        <source src="C:\Users\pc\Desktop\Portfolio\spaceview-bg.mp4" type="video/mp4">
+        <source src="Portfolio\spaceview-bg.mp4" type="video/mp4">
       </video>
       <nav>
         <a href="https://github.com/Le-Jireh" style="border-radius: 0 1rem 1rem 0;">
           Le-Jireh
-          <img src="C:\Users\pc\Desktop\Portfolio\github-mark.svg" style="height:1rem; width:1rem;"></img>
+          <img src="Portfolio\github-mark.svg" style="height:1rem; width:1rem;"></img>
         </a>
       </nav>
       <div class="content">
@@ -290,3 +290,4 @@
   }
   setInterval(animation, 3000)
 </script>
+
