--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <nav>
         <a href="https://github.com/Le-Jireh" style="border-radius: 0 1rem 1rem 0;">
           Le-Jireh
-          <img src="Portfolio\github-mark.svg" style="height:1rem; width:1rem;"></img>
+          <img src="Portfolio/github-mark.svg" style="height:1rem; width:1rem;"></img>
         </a>
     </nav>
     <div class="design">
@@ -198,3 +198,4 @@
 </body>
 
 </html>
+
