Fix HTML formatting and improve structure

--- a/Portfolio/fos-platters-description.html
+++ b/Portfolio/fos-platters-description.html
@@ -149,11 +149,12 @@
         enabling real-time order processing, reliable individual orders, and an enhanced digital customer experience.
       </p>
       <div>
-        <a href="index.html">BACK <</a>
+        <a href="../index.html">BACK <</a>
       </div>
     </main>
   </body>
 </html>
+
 
 
 
