Fix HTML encoding and update video source paths

--- a/Portfolio/waves-description.html
+++ b/Portfolio/waves-description.html
@@ -214,13 +214,14 @@
   <body>
     <section id="top">
       <video autoplay muted loop playsinline>
-        <source src="Portfolio\spaceview-bg.mp4" type="video/mp4">
+        <source src="spaceview-bg.mp4" type="video/mp4">
       </video>
       <nav>
         <a href="https://github.com/Le-Jireh" style="border-radius: 0 1rem 1rem 0;">
           Le-Jireh
-          <img src="Portfolio\github-mark.svg" style="height:1rem; width:1rem;"></img>
+          <img src="github-mark.svg" style="height:1rem; width:1rem;"></img>
         </a>
+        <a href='../index.html'>BACK <</a>
       </nav>
       <div class="content">
         <div class="description">
@@ -290,4 +291,5 @@
   }
   setInterval(animation, 3000)
 </script>
+
 
